@@ -1,3 +1,12 @@
+2018-05-07  Leo Balter  <leonardo.balter@gmail.com>
+
+        Test262-Runner: Add base module to the local deps - unicore/Exact.pl
+        https://bugs.webkit.org/show_bug.cgi?id=185390
+
+        Reviewed by Michael Saboff.
+
+        * Scripts/test262/local/lib/perl5/unicore/Exact.pl: Added.
+
 2018-05-07  Jonathan Bedard  <jbedard@apple.com>
 
         Check for com.apple.datamigrator before declaring simulators booted
